--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
               <li>
                 <a href="javascript:void(0);" onclick="app.methods.checkout();" class="panel-close">Check-out</a>
               </li>
-              <li>
+              <!--li>
                 <a href="/report/" class="panel-close">Gửi báo cáo</a>
               </li>
               <li>
@@ -41,9 +41,9 @@
               </li>
               <li>
                 <a href="/inventory_report/" class="panel-close">Báo cáo tồn kho</a>
-              </li>
+              </li-->
               <li>
-                <a href="/photo/" class="panel-close">Gửi hình ảnh</a>
+                <a href="/photo/" class="panel-close">Báo cáo hình ảnh</a>
               </li>
               <li>
                 <a href="javascript:void(0);" onclick="app.methods.logout();" class="panel-close">Đăng xuất</a>
