--- a/www/pages/photo.html
+++ b/www/pages/photo.html
@@ -218,7 +218,7 @@
           fileKey: "photo",
           fileName: fileURI.substr(fileURI.lastIndexOf('/') + 1),
           mimeType: "image/jpeg",
-          headers: { Connection: "close", token:token, programid:$('#programid').val(), note:$('#note').val(), location:$('#location').val(), address:$('#address').val(), street:$('#street').val(), city:app.data.preload.city, district:$('#district').val() },
+          headers: { Connection: "close", token:token, programid:$('#programid').val(), note:base64($('#note').val()), location:$('#location').val(), address:base64($('#address').val()), street:base64($('#street').val()), city:base64(app.data.preload.city), district:base64($('#district').val()) },
           httpMethod: "POST",
           chunkedMode: false
         };
