--- a/www/pages/photo.html
+++ b/www/pages/photo.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
+      <div class="card" style="display: none;">
         <div class="card-header">Chọn hình chụp sẵn</div>
         <div class="card-content">
           <div class="block" style="padding: 10px;">
