--- a/www/pages/photo.html
+++ b/www/pages/photo.html
@@ -63,21 +63,58 @@
             </li>
             <li class="item-content item-input">
               <div class="item-inner">
-                <div class="item-title item-label">Tên đường</div>
-                <div class="item-input-wrap">
-                  <input id="street" type="text">
-                </div>
-              </div>
-            </li>
-            <li class="item-content item-input">
-              <div class="item-inner">
                 <div class="item-title item-label">Quận/huyện</div>
                 <div class="item-input-wrap input-dropdown-wrap">
-                  <select id="district">
+                  <select id="district" @change="selectdistrict">
+                    <option value=""></option>
                     {{#each districts}}
                     <option value="{{this.name}}">{{this.name}}</option>
                     {{/each}}
                   </select>
+                </div>
+              </div>
+            </li>
+            <li id="street_select" class="item-content item-input" style="display: none;">
+              <div class="item-inner">
+                <div class="item-title item-label">Tên đường</div>
+                <div class="item-input-wrap input-dropdown-wrap">
+                  <select id="street">
+                    <option value=""></option>
+                    {{#each streets}}
+                    <option value="{{this.street}}" data-district="{{lowercase this.district}}">{{this.street}}</option>
+                    {{/each}}
+                    <option value="Khác">Khác</option>
+                  </select>
+                </div>
+              </div>
+            </li>
+            <li id="street_input" class="item-content item-input" style="display: none;">
+              <div class="item-inner">
+                <div class="item-title item-label">Tên đường</div>
+                <div class="item-input-wrap">
+                  <input id="street2" type="text"/>
+                </div>
+              </div>
+            </li>
+            <li id="ward_select" class="item-content item-input" style="display: none;">
+              <div class="item-inner">
+                <div class="item-title item-label">Phường/xã</div>
+                <div class="item-input-wrap input-dropdown-wrap">
+                  <select id="ward">
+                    <option value=""></option>
+                    {{#each wards}}
+                    <option value="{{this.ward}}" data-district="{{lowercase this.district}}">{{this.ward}}</option>
+                    {{/each}}
+                    <option value="Khác">Khác</option>
+                  </select>
+                </div>
+              </div>
+            </li>
+            <li id="ward_input" class="item-content item-input" style="display: none;">
+              <div class="item-inner">
+                <div class="item-title item-label">Phường/xã</div>
+                <div class="item-input-wrap input-dropdown-wrap">
+                  <input id="ward2" type="text"/>
                 </div>
               </div>
             </li>
@@ -98,7 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="card" style="display: none;">
+      <div class="card" {{#if nolibrary}}style="display: none;"{{/if}}>
         <div class="card-header">Chọn hình chụp sẵn</div>
         <div class="card-content">
           <div class="block" style="padding: 10px;">
@@ -143,11 +180,46 @@
        uploaded: 0,
        upload_total: 0,
        programs: this.$app.data.preload.programs,
-       districts: this.$app.data.districts
+       districts: this.$app.data.districts,
+       streets: this.$app.data.streets,
+       wards: this.$app.data.wards,
+       nolibrary: this.$app.data.remotecmd.indexOf('nolibrary') >= 0
       }
     },
     // Component Methods
     methods: {
+      selectdistrict: function() {
+        var self = this;
+        var $ = this.$;
+        var app = this.$app;
+        var router = this.$router;
+        var districtname = $('#district').val();
+        if(districtname=='')
+        {
+          $('#street_select').hide();
+          $('#ward_select').hide();
+        }
+        $('#street option').hide();
+        $('#street option[data-district="'+districtname.toLowerCase()+'"]').show();
+        $('#street_select').show();
+        $('#street_input').hide();
+        if($('#street option[data-district="'+districtname.toLowerCase()+'"]').length==0)
+        {
+          $('#street_select').hide();
+          $('#street_input').show();
+        }
+        $('#street option[value=""]').prop('selected', 'selected');
+        $('#ward option').hide();
+        $('#ward option[data-district="'+districtname.toLowerCase()+'"]').show();
+        $('#ward_select').show();
+        $('#ward_input').hide();
+        $('#ward option[value=""]').prop('selected', 'selected');
+        if($('#ward option[data-district="'+districtname.toLowerCase()+'"]').length==0)
+        {
+          $('#ward_select').hide();
+          $('#ward_input').show();
+        }
+      },
       camera: function(index) {
         var self = this;
         var $ = this.$;
@@ -161,7 +233,8 @@
            quality: 50,
            correctOrientation: true,
            destinationType: navigator.camera.DestinationType.FILE_URI,
-           sourceType: Camera.PictureSourceType.CAMERA
+           sourceType: Camera.PictureSourceType.CAMERA,
+           saveToPhotoAlbum: true
         });
       },
       library: function(index) {
@@ -208,11 +281,6 @@
         else{ token = app.data.token; }
         self.uploaded = 0;
         self.upload_total = $('img[data-uri]').length;
-        if(self.upload_total < 4)
-        {
-          app.dialog.alert('Bạn phải báo cáo đủ 4 hình', 'Báo lỗi');
-          return;
-        }
         if($('#location').val()=="")
         {
           app.dialog.alert('Bạn phải nhập tên cửa hàng', 'Báo lỗi');
@@ -223,14 +291,36 @@
           app.dialog.alert('Bạn phải nhập số nhà', 'Báo lỗi');
           return;
         }
-        if($('#street').val()=="")
+        if($('#district').val()=="")
+        {
+          app.dialog.alert('Bạn phải chọn quận/huyện', 'Báo lỗi');
+          return;
+        }
+        var _street = $('#street_select').css('display')!='none' ? $('#street').val() : $('#street2').val();
+        if(_street=="")
         {
           app.dialog.alert('Bạn phải nhập tên đường', 'Báo lỗi');
           return;
         }
-        if($('#district').val()=="")
+        var _ward = $('#ward_select').css('display')!='none' ? $('#ward').val() : $('#ward2').val();
+        if(_ward=="")
         {
-          app.dialog.alert('Bạn phải chọn quận/huyện', 'Báo lỗi');
+          app.dialog.alert('Bạn phải nhập phường/xã', 'Báo lỗi');
+          return;
+        }
+        if(_street=="Khác" && $('#note').val()=="")
+        {
+          app.dialog.alert('Bạn đã chọn đường "Khác" thì phải điền vào ghi chú', 'Báo lỗi');
+          return;
+        }
+        if(_ward=="Khác" && $('#note').val()=="")
+        {
+          app.dialog.alert('Bạn đã chọn phường/xã "Khác" thì phải điền vào ghi chú', 'Báo lỗi');
+          return;
+        }
+        if(self.upload_total < 4)
+        {
+          app.dialog.alert('Bạn phải báo cáo đủ 4 hình', 'Báo lỗi');
           return;
         }
         try{
@@ -251,7 +341,9 @@
           fileKey: "photo",
           fileName: fileURI.substr(fileURI.lastIndexOf('/') + 1),
           mimeType: "image/jpeg",
-          headers: { Connection: "close", token:token, programid:$('#programid').val(), stickers:$('#stickers').val(), note:base64($('#note').val()), location:$('#location').val(), address:base64($('#address').val()), street:base64($('#street').val()), city:base64(app.data.city), district:base64($('#district').val()) },
+          headers: { Connection: "close", token:token, programid:$('#programid').val(), stickers:$('#stickers').val(), note:base64($('#note').val()), location:$('#location').val(), address:base64($('#address').val()), street:base64(_street), city:base64(app.data.city), 
+          ward:base64(_ward), 
+          district:base64($('#district').val()) },
           httpMethod: "POST",
           chunkedMode: false
         };
