--- a/www/pages/inventory_enterdata 2.html
+++ b/www/pages/inventory_enterdata 2.html
@@ -95,7 +95,7 @@
           app.dialog.alert('Vui lòng nhập số lượng tồn cuối', 'Nhắc nhở');
           return;
         }
-        app.request.post('http://lavie.liveapps.top/index.php/app/inventory', { 
+        app.request.post('http://scj.liveapps.top/index.php/app/inventory', { 
             productid:productid, stocks1:stocks1, stocks2:stocks2, token:token
         }, function (raw) {
           try{
