--- a/www/pages/enterdata.html
+++ b/www/pages/enterdata.html
@@ -106,7 +106,7 @@
         var buyers = $('#buyers').val();
         var buys = $('#buys').val();
         //var display = $('#display').val();
-        if(views=='' || buyers=='' || buys=='' || display==''){
+        if(views=='' || buyers=='' || buys==''){
           app.dialog.alert('Vui lòng nhập đủ số liệu báo cáo', 'Nhắc nhở');
           return;
         }
